--- a/learneng_vite/index.html
+++ b/learneng_vite/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="chatting.html">Chatting.html</a> </br>
-    <a href="http://127.0.0.1:5000/scenario/">Scenario_configuration.html</a> </br>
+    <a href="editor_scenario_page.html">Scenario_configuration.html</a> </br>
     <a href="tabtest.html">Tabtest.html</a>
   </body>
 </html>
