--- a/learneng_vite/index.html
+++ b/learneng_vite/index.html
@@ -7,6 +7,7 @@
     <title>Index Title</title>
   </head>
   <body>
+    <a href="scenario_page.html">scenario_page.html</a> </br>
     <a href="chatting.html">Chatting.html</a> </br>
     <a href="editor_scenario_page.html">Scenario_configuration.html</a> </br>
     <a href="tabtest.html">Tabtest.html</a>
